Platforms/VivadoFPGA/vivadohls_code/hls_prj/F3_VivadoHLS_core/F3_VivadoHLS_core.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2013.4
Copyright (C) 2013 Xilinx Inc. All rights reserved.

==============================================================

@I [SYN-201] Setting up clock 'default' with a period of 10ns.
@I [HLS-10] Setting target device to 'xc7z020clg484-1'
@I [HLS-10] Analyzing design file 'srcs/vivado_core.c' ... 
@E [HLS-70] Compilation errors found:
srcs/vivado_core.c:9:18: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "math.h";
                 ^
                 //
srcs/vivado_core.c:10:21: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "pthread.h";
                    ^
                    //
srcs/vivado_core.c:11:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "stdint.h";
                   ^
                   //
srcs/vivado_core.c:12:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "stdlib.h";
                   ^
                   //
srcs/vivado_core.c:13:19: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "stdio.h";
                  ^
                  //
srcs/vivado_core.c:14:18: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "time.h";
                 ^
                 //
srcs/vivado_core.c:15:26: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "sys/resource.h";
                         ^
                         //
srcs/vivado_core.c:16:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "unistd.h";
                   ^
                   //
srcs/vivado_core.c:17:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "string.h";
                   ^
                   //
srcs/vivado_core.c:18:24: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "underlying.h";
                       ^
                       //
srcs/vivado_core.c:19:20: warning: extra tokens at end of #include directive [-Wextra-tokens]
#include "option.h";
                   ^
                   //
srcs/vivado_core.c:58:2: error: use of undeclared identifier 'pragma'
        pragma HLS INTERFACE ap_fifo port=result_0
        ^
srcs/vivado_core.c:67:20: error: use of undeclared identifier 'p'
        PATHSET_LOOP: for(p=0;p<PATHS;++p){
                          ^
srcs/vivado_core.c:67:24: error: use of undeclared identifier 'p'
        PATHSET_LOOP: for(p=0;p<PATHS;++p){
                              ^
srcs/vivado_core.c:67:34: error: use of undeclared identifier 'p'
        PATHSET_LOOP: for(p=0;p<PATHS;++p){
                                        ^
srcs/vivado_core.c:76:18: error: use of undeclared identifier 'pp'
                PATH_LOOP: for(pp=0;pp<(PATH_POINTS);++pp){
                               ^
srcs/vivado_core.c:76:23: error: use of undeclared identifier 'pp'
                PATH_LOOP: for(pp=0;pp<(PATH_POINTS);++pp){
                                    ^
srcs/vivado_core.c:76:42: error: use of undeclared identifier 'pp'
                PATH_LOOP: for(pp=0;pp<(PATH_POINTS);++pp){
                                                       ^
srcs/vivado_core.c:87:12: error: use of undeclared identifier 'p'
                result_0[p] = kernel_arg->o_v_0.value;
                         ^
srcs/vivado_core.c:88:17: error: use of undeclared identifier 'p'
                result_sqrd_0[p] = kernel_arg->o_v_0.value*kernel_arg->o_v_0.value;
                              ^
11 warnings and 9 errors generated.
@I [LIC-101] Checked in feature [HLS]
